--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -315,7 +315,7 @@ style.
 
 
       a.diceIcon.signInAnchor(href="/random" style="right:121px;")
-        img(src="/images/random.png" style="height:39px;margin-top:2px;")
+        img(src="/images/random.png" style="height:39px;margin-top:2px;opacity:0.9;")
 
 
 
