--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -273,6 +273,14 @@ style.
     }
 
   }
+
+  .postButton:hover {
+    background-color: blue !important;
+  }
+
+  .search-uploads-button:hover {
+    background-color: blue !important;
+  }
   
   
 
@@ -339,9 +347,9 @@ style.
 
 
       a(href="/upload" style="position: absolute;top: 13px;right: 79px;")
-        div.postButton(style="display:inline-block;border: 1px solid black;padding: 9px 36px;margin-left:15px;border-radius: 3px;background-color: white;" data-toggle='modal', data-target='#exampleModal')
+        div.postButton(style="display:inline-block;border: 1px solid #848484;padding: 9px 36px;margin-left:15px;border-radius: 3px;background-color: #313131;" data-toggle='modal', data-target='#exampleModal')
           //a(href="/donate")
-          h7(style="display:inline-block;color:black;") Upload
+          h7(style="display:inline-block;color:white;") Upload
 
       a(href="/upload" style="position: absolute;top: 13px;right: 79px;")
         div.postIcon
