about to switch out random image

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -274,12 +274,22 @@ style.
 
   }
 
+  .postButton {
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+  }
+
+  .search-uploads-button {
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+  }
+
   .postButton:hover {
-    background-color: blue !important;
+    background-color: #212121 !important;
   }
 
   .search-uploads-button:hover {
-    background-color: blue !important;
+    background-color: #212121 !important;
   }
   
   
@@ -339,7 +349,7 @@ style.
     if user
 
       a.diceIcon.signInAnchor(href="/random" style="right:212px;")
-        img(src="/images/random.png" style="height:39px;margin-top:2px")
+        img(src="/images/random.png" style="height:39px;margin-top:2px;opacity:0.9;")
 
       // BELL ICON
       //a(href="#" style="position: absolute;top: 19px;right: 280px;")
