change random icon

--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -349,7 +349,10 @@ style.
     if user
 
       a.diceIcon.signInAnchor(href="/random" style="right:212px;")
-        img(src="/images/random.png" style="height:39px;margin-top:2px;opacity:0.9;")
+
+        i.fas.fa-random(aria-hidden="true" style="cursor:pointer;color:#b9b9b9;font-size:32px;margin-top:3px;margin-right:5px;")
+
+        //img(src="/images/random.png" style="height:39px;margin-top:2px;opacity:0.9;")
 
       // BELL ICON
       //a(href="#" style="position: absolute;top: 19px;right: 280px;")
