--- a/views/media.pug
+++ b/views/media.pug
@@ -295,7 +295,7 @@ block content
 
             br
             // UPLOADER DETAILS SECTION
-            div.col-sm-3.uploader-details-section
+            div.col-sm-3.uploader-details-section(style="margin-bottom:30px")
                 h3.uploader-name(style="margin-top:25px;font-size:26px;")
                     if upload.uploader.customThumbnail
                         a(href=`/user/${upload.uploader.channelUrl}`)
