not autoplay after upload working

--- a/views/media.pug
+++ b/views/media.pug
@@ -249,9 +249,9 @@ block content
                 .row
                     .col-sm-6.col-sm-offset-3
 
-                        h2.balance-text(class="upload-title-value" style="display:inline;text-wrap:balance;width:80%;margin:0 auto;font-weight:300;color: rgb(185 185 185) !important;") #{upload.title}
+                        h2.balance-text(class="upload-title-value" style="display:inline;text-wrap:balance;width:80%;margin:0 auto;font-weight:300;color: #a9a9a9 !important;") #{upload.title}
                         if upload.formattedDuration
-                            h2.fw(style="display:inline;color: rgb(185 185 185) !important;").
+                            h2.fw(style="display:inline;color: #a9a9a9; !important;").
                                 &nbsp - #{upload.formattedDuration}
 
                     // download and whatever else buttons
