--- a/views/layoutPartials/header.pug
+++ b/views/layoutPartials/header.pug
@@ -333,7 +333,7 @@ style.
 
 
       a.diceIcon.signInAnchor(href="/random" style="right:121px;")
-        img(src="/images/random.png" style="height:39px;margin-top:2px;opacity:0.9;")
+        i.fas.fa-random(aria-hidden="true" style="cursor:pointer;color:#b9b9b9;font-size:32px;margin-top:3px;margin-right:5px;")
 
 
 
@@ -341,9 +341,9 @@ style.
       //  div.signInDiv(style="")
       //    i.fas.fa-dice
 
-      a.signInAnchor(href="/login" style="background-color:white;")
-        div.signInDiv(style="")
-          h7(style="display:inline-block;color:black;") Sign in
+      a.signInAnchor(href="/login" style="")
+        div.signInDiv(style="background-color: #313131;border: 1px solid #848484;")
+          h7(style="display:inline-block;color:white;") Sign In
 
 
     if user
