--- a/views/media.pug
+++ b/views/media.pug
@@ -170,6 +170,13 @@ block content
             border-bottom: 1px solid #5b5a5a !important;
         }
 
+        .lampIcon {
+            filter: invert(75%) sepia(0%) saturate(511%) hue-rotate(232deg) brightness(90%) contrast(82%);
+            height: 52px;
+            margin-top: -7px;
+            cursor: pointer;
+        }
+
 
         /* anything above this width */
 
@@ -267,6 +274,11 @@ block content
                             div.change-size-button.theatre-mode-button(style="margin-left:0px;")
                                 h2(style="")
                                     i.fa.fa-tv(aria-hidden="true" style="cursor:pointer;color:#a5a5a5;")
+
+                        // only do repeat button if it's audio or video
+                        if upload.fileType == 'video'
+                            div.change-size-button.lampIconDiv(style="margin-left:0px;")
+                                img.lampIcon(src="/images/lamp.png")
 
 
                         // only do repeat button if it's audio or video
@@ -678,6 +690,12 @@ block extra_footer_js
     $(document).ready(function () {
       // old scroll down to change the header
       //window.scrollTo(0, 21);
+
+
+      $('.lampIconDiv').click(function(){
+        console.log('clicked!');
+      })
+
 
 
       $('.plyr').focus()
